# NPS_Sensor_Receiver

./: CMakeLists.txt  LICENSE  README.md  sdkconfig.h
components/mirf/: mirf.c  sdkconfig.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h  sdkconfig.h
main/: CMakeLists.txt  test1.c
